add more categories

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/?q=Sports&page=1">Sports</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?q=Entertainment&page=1">Entertainment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?q=Tesla&page=1">Tesla</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?q=China&page=1">China</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?q=Ukraine&page=1">Ukraine</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/?q=US&page=1">US</a>
+                    </li>
 
 
                 </ul>
